# team-project-26spring-26s-23

./: .gitignore  .pr_agent.toml  LICENSE  README.md  package-lock.json  pyrightconfig.json
backend/: .env.example  .gitignore  README.md  check.py  pyproject.toml  search_course_catalog.py  sync_calendar_ics.py
backend/alembic/: env.py
backend/alembic/versions/: 20260413_01_chat_persistence_core.py  20260418_02_persist_tool_permission_policy.py  20260430_03_blackboard_html_fields.py  20260430_04_blackboard_announcement_assignment_links.py  20260502_05_blackboard_resource_download_persistence.py
backend/app/: timeline_db.py
backend/app/blackboard/: __init__.py
backend/app/blackboard/api/: __init__.py  announcements.py  calendar_ics_parser.py  contents.py  context.py  course_catalog.py  course_client.py  course_parser.py  dto.py  grades.py  scrape_support.py
backend/app/blackboard/data/: __init__.py  course_matcher.py  db_manager.py  models.py  results.py  sync_operations.py  sync_support.py
backend/app/blackboard/facade/: tools.py
backend/app/blackboard/provider/: results.py
backend/app/campus_info/: auto_update.py  chunker.py  downloader.py  extractor.py  fetcher.py  indexing.py  models.py  sectionizer.py  sources.py  storage.py
backend/app/copilot_runtime/: __init__.py  agent.py  agent_exceptions.py  agent_registry.py  agent_tool_lifecycle.py  bridge.py  campus_info_search_tool.py  composition.py  contracts.py  debug_logging.py  errors.py  execution_event_graph.py  execution_support.py  global_tool_catalog.py  legacy_event_projection.py  mcp_catalog_provider.py  mcp_snapshot_provider.py  mcp_tool_executor.py  message_runs.py  model_routes.py  protocol.py  provider_adapter_registry.py  provider_catalog.py  pydantic_contracts.py  router.py  run_events.py  runtime_session_store.py  session_store.py  skill_snapshot_provider.py  thinking_adapter.py  tool_approval_coordinator.py  tool_permissions.py  tool_registry.py
backend/app/desktop_runtime/: __init__.py  __main__.py  app_factory.py  capability_bridge_client.py  capability_bridge_host_capabilities.py  capability_bridge_protocol.py  config.py  contracts.py  health.py  host_model_route_bridge.py  lifecycle.py  middlewares.py  security.py  server.py  skill_bootstrap.py
backend/app/event_manager/: sync_bridge.py
backend/app/integrations/: __init__.py
backend/app/shared_integrations/: __init__.py
backend/app/teaching_information_system/: __init__.py
backend/app/tooling/: __init__.py  browser_tools.py
backend/app/tools/: __init__.py  campus_info_search.py  file_convert.py
backend/tests/: conftest.py  helpers.py
backend/tests/e2e/: test_blackboard_snapshot_sync_e2e.py
backend/tests/integration/: __init__.py  test_advanced_features_live.py  test_comprehensive_live.py  test_copilot_runtime_http.py  test_copilot_runtime_http_provider.py  test_scraper_live.py  test_tis_credit_gpa_live.py  test_tis_personal_grades_live.py  test_tis_selected_courses_live.py
(+1237 files in other folders)
