[project]
name = "backend"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=1.63.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "fastapi>=0.115.14",
    "uvicorn>=0.41.0",
    "pdfplumber>=0.11.9",
    "python-pptx>=1.0.2",
    "python-docx>=1.2.0",
    "alembic>=1.18.4",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2.2",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
]
dev = [
    "ruff>=0.15.11",
    "bandit>=1.9.4",
    "xenon>=0.9.3",
    "pyright>=1.1.408",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pyright]
include = ["app"]
extraPaths = ["."]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "live: requires real Blackboard credentials and network access",
    "e2e: end-to-end Blackboard snapshot sync verification",
]

[tool.ruff]
include = ["*.py"]

[tool.ruff.format]
quote-style = "double"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]
